# int-brain-esp32

./: .gitignore  CMakeLists.txt  Doxyfile  README.MD  README.md  buck-converter.kicad_sch  fp-lib-table  idf_component.yml  int-brain.c  int-brain.kicad_pcb  int-brain.kicad_prl  int-brain.kicad_pro  int-brain.kicad_sch  main.py  misc.c  motor-driver-DRV8251A.kicad_sch  motor-driver.kicad_sch  motor-encoder.c  sbc-i2c-interaction.c  sym-lib-table
examples/measurement/: measurement.c
examples/sbc-based-control/: sbc-based-control.c
examples/up-and-down/: up-and-down.c
include/: int-brain-sbc-registers.h  int-brain.h
int-brain-idf-compenent/: Doxyfile  LICENSE
int-brain-idf-compenent/include/: int-brain-sbc-registers.h  int-brain.h
int-brain-idf-compenent/src/: analog-inputs.c  int-brain.c  motor-commands.c  pca-driver.c
int-brain-idf-component/: CMakeLists.txt  README.MD
int-brain-idf-component/src/: sbc-interaction.c
int-brain-pcb/: .gitignore  README.md  buck-converter.kicad_sch  int-brain.kicad_pro  int-brain.kicad_sch
int-brain-sbc/: Doxyfile
int_brain/: core.py
int_brain_sbc/: __init__.py  communication.py  core.py  enums.py  registers.py  requirements.txt
int_brain_sbc/examples/: up-and-down.py
int_brain_sbc/protocols/: __init__.py  i2c.py
libraries/: ESP32-DEVKIT-V1.kicad_sym
libraries/3d/: Heatsink_30x25x25_TO220-3-LM7805.step  (+1 more)
src/: analog-inputs.c  four-wheel-bot.c  int-brain.c  misc.c  motor-commands.c  motor-current-sense.c  motor-encoder.c  pca-driver.c  pcnt-encoder.c  sbc-i2c-interaction.c  sbc-interaction.c
(+13 files in other folders)
